<resources>
    <string name="app_name">CortexScan</string>
    <string name="scanner_activity">CortexScan</string>
    <string name="flash_on">Torch [ON]</string>
    <string name="flash_off">Torch [OFF]</string>
    <string name="formats">Formats</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_my_preference">Settings</string>
    <string name="large_data_display">Large Data Display</string>
    <string name="low_contrast_mode">Low Contrast Mode</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="character_encoding">Character Encoding</string>
    <string name="vibrate_on_scan">Enable Vibrate On Scan</string>
    <string name="continuous_scan_mode">Continuous Scan Mode</string>
    <string name="picklist_mode">Picklist Mode</string>
    <string name="focus">Focus</string>
    <string name="resolution">Resolution</string>
    <string name="beep_sounds">Beep Sounds</string>
    <string name="beep_mode">Enable Beep on Scan</string>
    <string name="illumination">Illumination</string>
    <string name="symbologies">Symbologies</string>
    <string name="information">Information</string>
    <string name="enable_all">Enable All</string>
    <string name="disable_all">Disable All</string>
    <string name="aztec">Aztec</string>
    <string name="bc412">BC412</string>
    <string name="code11">Code 11</string>
    <string name="code128">Code 128</string>
    <string name="code32">Code 32</string>
    <string name="code39">Code 39</string>
    <string name="code49">Code 49</string>
    <string name="code93">Code 93</string>
    <string name="compositeCode">Composite Code</string>
    <string name="codabar">Codabar</string>
    <string name="codablockf">Codablock F</string>
    <string name="data_matrix">Data Matrix</string>
    <string name="ean13">EAN-13</string>
    <string name="ean8">EAN-8</string>
    <string name="grid_matrix">Grid Matrix</string>
    <string name="dot_code">Dot Code</string>
    <string name="gs1_databar">GS1 Databar</string>
    <string name="hong_kong_2_of_5">Hong Kong 2 of 5</string>
    <string name="iata_2_of_5">IATA 2 of 5</string>
    <string name="interleaved_2_of_5">Interleaved 2 of 5</string>
    <string name="matrix_2_of_5">Matrix 2 of 5</string>
    <string name="micropdf417">MicroPDF417</string>
    <string name="microqr">MicroQR</string>
    <string name="msi_plessey">MSI Plessey</string>
    <string name="nec_2_of_5">NEC 2 of 5</string>
    <string name="pdf417">PDF417</string>
    <string name="pharmacode">Pharmacode</string>
    <string name="plessey">Plessey</string>
    <string name="qr_code">QR Code</string>
    <string name="straight_2_of_5">Straight 2 of 5</string>
    <string name="telepen">Telepen</string>
    <string name="trioptic">Trioptic</string>
    <string name="upc_a">UPC-A</string>
    <string name="upc_e">UPC-E</string>
    <string name="barcode_colon">Barcode:</string>
    <string name="length_colon">Length:</string>
    <string name="symbology_colon">Symbology:</string>
    <string name="tap_to_scan_again">Tap to scan again.</string>
    <string name="debug_mode">Save images for debugging</string>
    <string name="data_display">Data Display</string>
    <string name="done">Done</string>
    <string name="debug_level">Debug Log</string>
    <string name="focus_normal">Auto</string>
    <string name="focus_normal_fixed">Normal Fixed</string>
    <string name="focus_fixed">Fixed</string>
    <string name="focus_far">Far Auto</string>
    <string name="focus_far_fixed">Far Fixed</string>
    <string name="unsupported">Unsupported</string>
    <string name="focus_mode_not_supported">Focus mode not supported</string>
    <string name="camera_type">Camera Type</string>
    <string name="camera_type_front">Front-Facing</string>
    <string name="camera_type_back">Back-Facing</string>
    <string name="camera_type_not_supported">Camera type not supported</string>
    <string name="demo_version_str">Demo Version - Barcode data is truncated</string>
    <string name="hanxin_code">Han Xin Code</string>
    <string name="maxi_code">MaxiCode</string>
    <string name="australia_post">Australia Post</string>
    <string name="canada_post">Canada Post</string>
    <string name="dutch_post">Dutch Post (KIX)</string>
    <string name="japan_post">Japan Post</string>
    <string name="korea_post">Korea Post</string>
    <string name="royal_mail">Royal Mail</string>
    <string name="usps_intelligent_mail">USPS Intelligent Mail</string>
    <string name="usps_planet">USPS Planet</string>
    <string name="usps_postnet">USPS Postnet</string>
    <string name="upu">UPU ID-tags</string>
    <string name="scan_button_desc">Scan button</string>
    <string name="code_corp_logo">Code Corp logo</string>
    <string name="settings_desc">Settings button</string>
    <string name="license_activation">License Activation</string>
    <string name="licenseValid">License Activated</string>
    <string name="licenseInvalid">License Invalid</string>
    <string name="deviceIDCreated">Device ID file is created</string>
    <string name="deviceIDNotCreated">Error in the creation of Device ID file</string>
    <string name="deviceID">Generate Device ID file</string>
    <string name="loadlicense">Load license file</string>
    <string name="activate">Activate</string>
    <string name="uniqueBarcodeScan">Scan Unique Barcode</string>
    <string name="summaryActivateButton">Requires internet connection</string>
    <string name="noInternet">Please enable internet to activate the license</string>
    <string name="alreadyActivated">The license is already activated</string>
    <string name="activateLicenseToast">Please activate the license</string>
    <string name="expiredLicenseToast">License is expired</string>
    <string name="direct_part_marking_string">Direct Part Marking Mode</string>
    <string name="decode_data_formatting_string">Decode Data Parsing and Formatting</string>
    <string name="permission_rationale">This permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="ok">OK</string>
    <string name="info_error">ERROR</string>
    <string name="tachyon_iq_logo">Tachyon IQ Logo</string>
    <string name="cortex_scan_logo">Cortex Scan logo</string>
    <string name="startup_screen_footer">Startup screen footer</string>
    <string name="startupscreen_text">Blazing fast barcode scanning software for your app integration</string>
    <string name="startup_tag_text">Test drive our tech!</string>
    <string name="scan_now">Scan Now</string>
    <string name="get_started">Get Started</string>
</resources>
